2002-12-14  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22.glimmer): depend on libgnomeprint-2.0
	(gnome22.startup-notification): add libsnot.

2002-12-13  Thomas Vander Stichele <thomas at apestaart dot org>

	* moduleinfo.py  (gnome22): add nautilus-media.

2002-12-13  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py: Add new module for regexxer. (#99780)

2002-12-12  James Henstridge  <james@daa.com.au>

	* module.py (CVSModule.do_configure): fix bug.

	* bootstrap.py (bootstraps): update versions of bootstraps.
	Autoconf up to 2.57, Automake-1.7 up to 1.7.2 and gettext up to
	0.11.5.

	* moduleinfo.py (gnome2): add scrollkeeper as a dep of various
	modules.
	(gnome20.scrollkeeper): require intltool.  scrollkeeper checks for
	it, even though it distributes its own version of it.
	(gnome20.devhelp): require libgsf (from bug #100177).

	* bootstrap.py (bootstraps): remove scrollkeeper from list of
	bootstraps.

	* moduleinfo.py (gnome20.scrollkeeper): add scrollkeeper as a
	Tarball type package, with libxml2 and libxslt as dependencies.

	* module.py (Tarball): another Package type, pulling most of the
	logic from bootstrap.py.  Can fit into dependency chains with CVS
	modules.  Not being used yet.
	(Tarball.do_install): add a little build stamp when install has
	completed.
	(Tarball.do_start): if jhbuild-build-stamp exists, skip build.

2002-12-11  James Henstridge  <james@daa.com.au>

	* cvs.py (CVSRoot.update): fix up call to self.checkout.

	* moduleinfo.py (gnome22): add modules for the gnome 2.0 versions
	of libgnomeprint{,ui}.  Make changes to match updates to jhbuild.

	* cvs.py (CVSRoot.checkout, CVSRoot.update): update.

	* jhbuild.py: make it work with the refactored module.py

	* module.py: refactor a bit, putting more intelligence into the
	Module classes, simplifying the build loop.

2002-12-10  Chema Celorio  <chema@celorio.com>

	* moduleinfo.py: Fix libgnomeprint[ui] deps. Remove bonobo,
	add gnome-common & pango.