@@ -138,35 +138,33 @@ class Bootstrap:
 
 bootstraps = [
     Bootstrap('gettext', '0.11.5',
-              'ftp://ftp.gnu.org/pub/gnu/gettext/gettext-0.11.5.tar.gz',
+              'http://ftp.gnu.org/gnu/gettext/gettext-0.11.5.tar.gz',
               3724099,
               [('gettext-changelog.patch', 1)],  # patch to unbreak gettext ...
               'gettextize --version | head -1'),
     Bootstrap('autoconf', '2.57',
-              'ftp://ftp.gnu.org/pub/gnu/autoconf/autoconf-2.57.tar.gz',
+              'http://ftp.gnu.org/gnu/autoconf/autoconf-2.57.tar.gz',
               1074128,
               [],
 	      '((which autoconf2.50 &> /dev/null && autoconf2.50 --version) || autoconf --version) | head -1'),
-    Bootstrap('libtool', '1.4.2',
-              'ftp://ftp.gnu.org/pub/gnu/libtool/libtool-1.4.2.tar.gz',
-              1184578,
+    Bootstrap('libtool', '1.4.3',
+              'http://ftp.gnu.org/gnu/libtool/libtool-1.4.3.tar.gz',
+              1164463
               [('libtool-1.3.5-mktemp.patch' , 1),
-               ('libtool-1.4.2-test-quote.patch', 1),
-               ('libtool-1.4.2-relink-58664.patch', 1),
-               ('libtool-1.4.2-dup-deps.patch', 1)],
+               ('libtool-1.4.2-relink-58664.patch', 1)],
               'libtoolize --version'),
     Bootstrap('automake-1.4', '1.4-p6',
-              'ftp://ftp.gnu.org/pub/gnu/automake/automake-1.4-p6.tar.gz',
+              'http://ftp.gnu.org/gnu/automake/automake-1.4-p6.tar.gz',
               375060,
               [],
               'automake-1.4 --version | head -1'),
     Bootstrap('automake-1.6', '1.6.3',
-              'ftp://ftp.gnu.org/pub/gnu/automake/automake-1.6.3.tar.gz',
+              'http://ftp.gnu.org/gnu/automake/automake-1.6.3.tar.gz',
               609618,
               [],
               'automake-1.6 --version | head -1'),
     Bootstrap('automake-1.7', '1.7.2',
-              'ftp://ftp.gnu.org/pub/gnu/automake/automake-1.7.2.tar.gz',
+              'http://ftp.gnu.org/gnu/automake/automake-1.7.2.tar.gz',
               677283,
               [],
               'automake-1.7 --version | head -1'),
