@@ -1,7 +1,13 @@
 2002-12-14  James Henstridge  <james@daa.com.au>
 
+	* module.py (CVSModule.do_build): allow going to 'configure' state
+	if build fails.
+
+	* bootstrap.py (bootstraps): update libtool to 1.4.3.
+
 	* moduleinfo.py (gnome22.glimmer): depend on libgnomeprint-2.0
 	(gnome22.startup-notification): add libsnot.
+	(gnome22.gnome-terminal): remove libzvt from list of deps.
 
 2002-12-13  Thomas Vander Stichele <thomas at apestaart dot org>
 
